kmymoney/plugins/views/reports/core/querytable.cpp
@@ -199,8 +199,8 @@ void QueryTable::init()
             m_subtotal << ctBuys << ctSells << ctReinvestIncome << ctCashIncome << ctEndingBalance << ctExtendedInternalRateOfReturn << ctReturnInvestment;
             break;
         case eMyMoney::Report::InvestmentSum::Owned:
-            m_columns << ctBuys << ctReinvestIncome << ctMarketValue << ctExtendedInternalRateOfReturn << ctReturnInvestment;
-            m_subtotal << ctBuys << ctReinvestIncome << ctMarketValue << ctExtendedInternalRateOfReturn << ctReturnInvestment;
+            m_columns << ctBuys << ctReinvestIncome << ctCashIncome << ctMarketValue << ctExtendedInternalRateOfReturn << ctReturnInvestment;
+            m_subtotal << ctBuys << ctReinvestIncome << ctCashIncome << ctMarketValue << ctExtendedInternalRateOfReturn << ctReturnInvestment;
             break;
         case eMyMoney::Report::InvestmentSum::Sold:
             m_columns << ctBuys << ctSells << ctCashIncome << ctExtendedInternalRateOfReturn << ctReturnInvestment;
@@ -1480,12 +1480,15 @@ void QueryTable::constructPerformanceRow(const ReportAccount& account, TableRow&
         break;
     case eMyMoney::Report::InvestmentSum::Owned:
         buysTotal = cfList.at(BuysOfOwned).total();
+        cashIncomeTotal = cfList.at(CashIncome).total();
         startingBal = MyMoneyMoney();
-        if (buysTotal.isZero() && endingBal.isZero())
+        if (buysTotal.isZero() && sellsTotal.isZero() && cashIncomeTotal.isZero())
             return;
         all.append(cfList.at(BuysOfOwned));
         all.append(CashFlowListItem(endingDate, endingBal));
+        all.append(cfList.at(CashIncome));
 
+        result[ctCashIncome] = cashIncomeTotal.toString();
         result[ctReinvestIncome] = reinvestIncomeTotal.toString();
         result[ctMarketValue] = endingBal.toString();
         break;
